--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 /* ============================== */
+* {
+  margin: 0;
+}
 
 header.header__main__wrap {
   width: 100%;
@@ -123,7 +126,7 @@ section.hero__main__area {
 .hero-bottom-wrap {
   position: absolute;
   width: 100%;
-  bottom: 40px;
+  bottom: 8px;
   z-index: 999;
 }
 
@@ -141,6 +144,7 @@ section.hero__main__area {
   margin-bottom: 0;
   position: relative;
   color: #fff;
+  padding-left: 25px;
 }
 
 .hero-bottom-right {
@@ -167,5 +171,81 @@ section.hero__main__area {
   border-bottom: 56px solid #1f3b79;
 }
 
+/* .hero-bottom-left p marquee {
+  position: absolute;
+  top: 0;
+} */
 
+.hero-bottom-left p span {
+  position: relative;
+  color: red;
+  font-weight: 900;
+  display: inline-block;
+  margin-right: 5px;
+  font-size: 16px;
+}
+
+.hero-bottom-left p span:after {
+  content: "";
+  width: 15px;
+  height: 15px;
+  position: absolute;
+  background: red;
+  left: -25px;
+  top: 5px;
+  border-radius: 50%;
+  z-index: 9999;
+}
+
+
+
+/* ========================================= */
+.fixer-single-item {
+  text-align: center;
+  border: 1px solid #ddd;
+  padding: 15px;
+  border-top: 0;
+}
+
+.team-wrap {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+}
+
+.team-left img {
+  width: 55px;
+}
+
+.team-right img {
+  width: 55px;
+}
+
+.fixer-slider-wrap a {
+  text-decoration: none;
+  color: #000;
+  font-weight: 600;
+  background: #fff;
+  width: 100%;
+  height: 100%;
+  display: block;
+  transition: .3s;
+  -webkit-transition: .3s;
+  -moz-transition: .3s;
+  -ms-transition: .3s;
+  -o-transition: .3s;
+}
+
+.fixer-slider-wrap a:hover {
+  color: #fff;
+  background: #1f3b79;
+  transition: .3s;
+  -webkit-transition: .3s;
+  -moz-transition: .3s;
+  -ms-transition: .3s;
+  -o-transition: .3s;
+}
+
+/* ========================================= */
+/* ========================================= */
 /* ========================================= */
