--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 header.header__main__wrap {
   width: 100%;
-  background-color: rgb(13 110 253 / 25%) !important;
+  background-color: #fff;
   padding: 20px 0;
 }
 
@@ -82,7 +82,7 @@ a.nav-link.desktop__site_logo:after {
   position: absolute;
   bottom: -130px;
   left: -70px;
-  border-top: 80px solid #0a58ca;
+  border-top: 80px solid #ffffff;
   border-left: 37px solid transparent;
   border-right: 37px solid transparent;
 }
@@ -213,12 +213,29 @@ section.hero__main__area {
   text-align: center;
 }
 
+.match-date p {
+  margin-bottom: 44px;
+}
+
 .team-left img {
-  width: 55px;
+  width: 55px !important;
+  margin: auto;
 }
 
 .team-right img {
-  width: 55px;
+  width: 55px !important;
+  margin: auto;
+}
+
+.team-wrap h2 {
+  font-size: 26px;
+}
+
+span.team-win {
+  background: red;
+  color: #fff;
+  padding: 2px 10px;
+  border-radius: 5px;
 }
 
 .fixer-slider-wrap a {
@@ -247,5 +264,218 @@ section.hero__main__area {
 }
 
 /* ========================================= */
+section.news-main-area {
+  padding: 100px 0;
+}
+
+.news-inner-wrap {
+  padding-top: 50px;
+}
+
+.section-title {
+  display: flex;
+  align-items: center;
+  margin-bottom: 50px;
+}
+
+.news-title-left {
+  margin-right: 10%;
+}
+
+.news-title-right .nav-link {
+  color: #000000;
+
+}
+
+.news-title-right .nav-pills .nav-link.active,
+.nav-pills .show>.nav-link {
+  color: #f00;
+  background-color: #ffffff;
+  border-bottom: 2px solid red;
+  border-radius: unset;
+}
+
+.news-content-left {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.news-content-top-image {
+  transition: .5s;
+  -webkit-transition: .5s;
+  -moz-transition: .5s;
+  -ms-transition: .5s;
+  -o-transition: .5s;
+}
+
+.news-content-top-image:hover img {
+  transform: scale(1.2);
+  transition: .5s;
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  -o-transform: scale(1.2);
+  -webkit-transition: .5s;
+  -moz-transition: .5s;
+  -ms-transition: .5s;
+  -o-transition: .5s;
+}
+
+.news-content-top-image img {
+  width: 100%;
+  transition: .5s;
+  -webkit-transition: .5s;
+  -moz-transition: .5s;
+  -ms-transition: .5s;
+  -o-transition: .5s;
+}
+
+.news-content-bottom {
+  background: linear-gradient(0deg, #0000002e, transparent);
+  padding: 15px 15px;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+}
+
+.news-bottom-comments {
+  display: flex;
+  align-items: center;
+}
+
+.news-bottom-comments-left {
+  margin-right: 20px;
+}
+
+.news-bottom-date p {
+  margin-bottom: 0;
+}
+
+.news-bottom-date a {
+  color: #000;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 24px;
+}
+
+.news-sidebar-single-items .card {
+  border: none;
+}
+
+.news-sidebar-single-items h5.card-title a {
+  text-decoration: none;
+  color: #000;
+  transition: .3s;
+  -webkit-transition: .3s;
+  -moz-transition: .3s;
+  -ms-transition: .3s;
+  -o-transition: .3s;
+}
+
+.news-sidebar-single-items h5.card-title a:hover {
+  color: red;
+  transition: .3s;
+  -webkit-transition: .3s;
+  -moz-transition: .3s;
+  -ms-transition: .3s;
+  -o-transition: .3s;
+}
+
+.news-sidebar-single-items .card-body p {
+  margin-bottom: 0;
+  font-size: 16px;
+}
+
+.sidebar-image-wrap {
+  overflow: hidden;
+}
+
+img.img-fluid.sidebar-image {
+  transition: .5s;
+
+}
+
+img.img-fluid.sidebar-image:hover {
+  transform: scale(1.2);
+  transition: .5s;
+
+}
+
 /* ========================================= */
+.upcoming-match {
+  padding: 100px 0;
+}
+
+.upcoming-match-title h2 {
+  margin-bottom: 25px;
+  font-weight: 700;
+}
+
+.single-match-item {
+  text-align: center;
+  padding: 25px;
+  border: 1px solid #ddd;
+}
+
+.match-team-vs-team {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+}
+
+.upcoming-match-list-wrap .owl-nav {
+  position: absolute;
+  top: -50px;
+  right: 0;
+}
+
+.upcoming-match-list-wrap button.owl-prev {
+  left: -60px;
+  position: relative;
+}
+
+.upcoming-match-list-wrap button.owl-prev:after {
+  content: "";
+  width: 50px;
+  height: 30px;
+  border: 2px solid #463636;
+  position: absolute;
+  left: 0;
+  transform: skewX(-10deg);
+}
+
+.upcoming-match-list-wrap button.owl-prev img {
+  width: 24px;
+  position: relative;
+  z-index: 999;
+  left: 10px;
+}
+
+.upcoming-match-list-wrap button.owl-next {
+  right: 30px;
+  position: relative;
+}
+
+.upcoming-match-list-wrap button.owl-next:after {
+  content: "";
+  width: 50px;
+  height: 30px;
+  border: 2px solid #463636;
+  position: absolute;
+  left: 0;
+  transform: skewX(-10deg);
+}
+
+.upcoming-match-list-wrap button.owl-next img {
+  width: 24px;
+  position: relative;
+  z-index: 999;
+  left: 10px;
+}
+
 /* ========================================= */
