--- a/style.css
+++ b/style.css
@@ -197,7 +197,63 @@ section.hero__main__area {
   z-index: 9999;
 }
 
+.hero-button-area {
+  width: 200px;
+  margin: auto;
+  height: 50px;
+}
 
+.hero-button-area a {
+  text-decoration: none;
+  color: #fff;
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 999;
+  line-height: 50px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.hero-button-area a:after {
+  content: "";
+  background: red;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: skewX(-13deg);
+  z-index: -99;
+}
+
+.hero-button-area a:before {
+  width: 100%;
+  height: 100%;
+  border: 4px solid red;
+  content: "";
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  z-index: -1;
+  transform: skewX(-13deg);
+  transition: .5s;
+  -webkit-transition: .5s;
+  -moz-transition: .5s;
+  -ms-transition: .5s;
+  -o-transition: .5s;
+}
+
+.hero-button-area:hover a::before {
+  left: 0;
+  top: 0;
+  transition: .5s;
+  -webkit-transition: .5s;
+  -moz-transition: .5s;
+  -ms-transition: .5s;
+  -o-transition: .5s;
+}
 
 /* ========================================= */
 .fixer-single-item {
@@ -478,4 +534,344 @@ img.img-fluid.sidebar-image:hover {
   left: 10px;
 }
 
+/* ========================================= */
+.best-player-main-area {
+  background-image: url(assets/img/background.jpg);
+  padding: 100px 0;
+}
+
+.best-player-slider-content-right>a {
+  font-size: 24px;
+  text-decoration: none;
+  font-weight: 700;
+  margin: 40px 0;
+  margin-bottom: 25px;
+  display: block;
+  color: #000;
+}
+
+.player-ranking {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.player-ranking-left {
+  width: 60px;
+  text-align: center;
+  height: 30px;
+
+  color: #fff;
+  border-radius: 5px;
+  margin-right: 10px;
+  position: relative;
+
+
+}
+
+.player-ranking-left::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: red;
+  transform: skewX(-12deg);
+}
+
+.player-ranking-left h3 {
+  font-size: 24px;
+  margin-bottom: 0;
+  z-index: 99;
+  position: relative;
+}
+
+.player-ranking-right h3 {
+  font-size: 24px;
+  margin-bottom: 0;
+}
+
+.best-slider-items {
+  position: relative;
+}
+
+.best-player-slider-bg {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: #fff;
+  transform: skew(-10deg);
+  overflow: hidden;
+  width: 91.5%;
+  margin: auto;
+}
+
+.best-player-slider-bg:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -60px;
+  right: -135px;
+  width: 200px;
+  height: 400px;
+  background-color: #d2d8e4;
+  transform: rotate(-24deg);
+}
+
+.best-player-slider-bg:before {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: -60px;
+  left: -135px;
+  width: 200px;
+  height: 400px;
+  background-color: #d2d8e4;
+  transform: rotate(-24deg);
+}
+
+.best-player-slider-content-right {
+  position: relative;
+}
+
+.best-player-slider-content-right .hero-button-area {
+  margin: unset;
+  margin-top: 20px;
+}
+
+.best-player-slider-content-left img {
+  position: relative;
+  width: 100%;
+}
+
+.best-player-slider-content {
+  padding: 30px 8% 0px 8%;
+}
+
+.best-player-slider-content-right .table {
+  border-color: #fff;
+}
+
+.best-player-slider-content-right tbody tr td:nth-child(2) {
+  text-align: right;
+}
+
+.best-player-title {
+  text-align: center;
+}
+
+.best-player-title h2 {
+  color: #fff;
+  margin-bottom: 50px;
+  font-weight: 700;
+  text-transform: capitalize;
+}
+
+.best-player-slider-inner-wrap button.owl-prev {
+  position: absolute;
+  bottom: 80px;
+  left: 10px;
+}
+
+.best-player-slider-inner-wrap button.owl-prev:after {
+  content: "";
+  width: 40px;
+  height: 35px;
+  position: absolute;
+  background: #1f3b79;
+  left: 0;
+  transform: skewX(-10deg);
+}
+
+.best-player-slider-inner-wrap button.owl-prev i {
+  position: relative;
+  z-index: 99;
+  color: #fff;
+  left: 8px;
+  font-size: 22px;
+  top: 5px;
+}
+
+.best-player-slider-inner-wrap button.owl-next {
+  position: absolute;
+  top: 40px;
+  right: 0;
+}
+
+.best-player-slider-inner-wrap button.owl-next:after {
+  content: "";
+  width: 40px;
+  height: 35px;
+  position: absolute;
+  background: #1f3b79;
+  right: 8px;
+  transform: skew(-10deg);
+}
+
+.best-player-slider-inner-wrap button.owl-next i {
+  position: relative;
+  z-index: 99;
+  color: #fff;
+  right: 17px;
+  top: 5px;
+  font-size: 22px;
+}
+
+/* ========================================= */
+.store-main-area {
+  padding: 100px 0;
+}
+
+.store-title h2 {
+  margin-bottom: 40px;
+  font-weight: 700;
+}
+
+.store-single-slider a {
+  text-decoration: none;
+  color: #000;
+}
+
+.product-footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.product-price h4 {
+  font-size: 18px;
+  margin-bottom: 0;
+}
+
+.store-single-slider p {
+  margin: 0;
+}
+
+.store-single-slider:hover p {
+  margin: 0;
+}
+
+.shop-now-btn {
+  text-decoration: none;
+  color: red;
+  font-size: 16px;
+  position: relative;
+  bottom: -20px;
+  opacity: 0;
+  visibility: hidden;
+  /* height: 0px; */
+  transition: .5s;
+}
+
+.store-single-slider:hover .shop-now-btn {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+  bottom: 0;
+  color: red;
+  transition: .5s;
+}
+
+.store-product-slider .card {
+  border: none;
+}
+
+.store-product-slider .card-body h5 {
+  font-size: 20px;
+  margin-bottom: 0px;
+}
+
+.store-product-slider .owl-nav {
+  position: absolute;
+  right: 0;
+  top: -50px;
+}
+
+button.owl-prev {
+  display: inline-block;
+  border: 1px solid #1f3b79 !important;
+  width: 37px;
+  height: 32px;
+  position: relative;
+  font-size: 0;
+  transition: .3s;
+  transform: skew(-10deg);
+  -webkit-transform: skew(-10deg);
+  -moz-transform: skew(10deg);
+  -o-transform: skew(10deg);
+  border-radius: 0;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+button.owl-next {
+  display: inline-block;
+  border: 1px solid #1f3b79 !important;
+  width: 37px;
+  height: 32px;
+  position: relative;
+  font-size: 0;
+  transition: .3s;
+  transform: skew(-10deg);
+  -webkit-transform: skew(-10deg);
+  -moz-transform: skew(-10deg);
+  -o-transform: skew(-10deg);
+  border-radius: 0;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  margin-left: 5px;
+  -ms-transform: skew(-10deg);
+}
+
+/* ========================================= */
+.instagram-main-area {
+  padding: 50px 0;
+}
+
+.instagram-inner-wrap {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+  gap: 1vw;
+}
+
+.instagram-single {
+  position: relative;
+}
+
+.instagram-single img {
+  width: 100%;
+}
+
+.instagram-hover {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #00000040;
+  transform: scale(0);
+  transition: .5s;
+}
+
+.instagram-hover a {
+  position: absolute;
+  right: 10px;
+  bottom: 5px;
+  color: #fff;
+}
+
+.instagram-single:hover .instagram-hover {
+  transform: scale(1);
+}
+
+/* ========================================= */
+/* ========================================= */
 /* ========================================= */
