--- a/style.css
+++ b/style.css
@@ -3,6 +3,30 @@
   margin: 0;
 }
 
+/* ---------------------------------- */
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #FFFFFF;
+  z-index: 9999;
+}
+
+#status {
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  background-image: url(assets/img/preloader.gif);
+  background-repeat: no-repeat;
+  background-position: center;
+  margin: -100px 0 0 -100px;
+}
+
+/* ---------------------------------- */
 header.header__main__wrap {
   width: 100%;
   background-color: #fff;
