--- a/style.css
+++ b/style.css
@@ -1241,3 +1241,96 @@ p.footer-right-bottom {
 }
 
 /* ========================================= */
+/* ===================shop page====================== */
+.shop-category-main-area {
+  margin-top: 60px;
+  background: #1f3b79;
+  padding: 80px 0;
+}
+
+.shop-category-title h3 {
+  color: #fff;
+  font-weight: 700;
+}
+
+.shop-category-list ul {
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+.shop-category-list ul li {
+  list-style: none;
+  display: inline-block;
+  margin-right: 30px;
+}
+
+.shop-category-list ul li a {
+  color: #fff;
+  font-weight: 500;
+  text-decoration: none;
+}
+
+/* ------------------------------ */
+.shop-single-item {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin-bottom: 30px;
+  transition: .3s;
+  -webkit-transition: .3s;
+  -moz-transition: .3s;
+  -ms-transition: .3s;
+  -o-transition: .3s;
+}
+
+.shop-single-item:hover {
+  border-color: red;
+  transition: .3s;
+}
+
+.shop-single-item .card {
+  border: none;
+}
+
+.add-to-cart-btn-wrap {
+  position: absolute;
+  top: 0;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  margin-top: -10px;
+  justify-content: center;
+  width: 100%;
+  visibility: hidden;
+  opacity: 0;
+  transition: .3s;
+  -webkit-transition: .3s;
+  -moz-transition: .3s;
+  -ms-transition: .3s;
+  -o-transition: .3s;
+}
+
+.shop-single-item:hover .add-to-cart-btn-wrap {
+  opacity: 1;
+  margin-top: 0px;
+  visibility: visible;
+  top: 0;
+}
+
+.shop-single-item .card-body {
+  flex: 1 1 auto;
+  padding: 1rem 1rem;
+  position: relative;
+  z-index: 9;
+  text-align: center;
+}
+
+.shop-single-item .card-body a {
+  text-decoration: none;
+  color: #000;
+}
+
+/* ------------------------------ */
+/* ===================shop page====================== */
