--- a/style.css
+++ b/style.css
@@ -1271,6 +1271,10 @@ p.footer-right-bottom {
 }
 
 /* ------------------------------ */
+.shop-product-inner-wrap {
+  padding: 50px 0;
+}
+
 .shop-single-item {
   position: relative;
   width: 100%;
@@ -1330,6 +1334,83 @@ p.footer-right-bottom {
 .shop-single-item .card-body a {
   text-decoration: none;
   color: #000;
+  font-weight: 600;
+}
+
+a.product-cart-btn span {
+  color: red;
+}
+
+.product-sidebar-single {
+  padding: 0 0 0px 15px;
+}
+
+.product-sidebar-single a {
+  color: #000;
+  text-decoration: none;
+
+}
+
+.product-sidebar-single h5 {
+  font-size: 22px !important;
+}
+
+a.product-cart-btn {
+  font-size: 18px;
+}
+
+.product-sidebar-single-items .card {
+  border-bottom: 1px solid #ddd;
+  border-radius: 0;
+  border-top: 0;
+  border-right: 0;
+  border-left: 0;
+  margin-bottom: 15px;
+  padding-bottom: 10px;
+}
+
+.product-rating i {
+  font-size: 15px;
+  color: gold;
+}
+
+.product-sidebar-title h3 {
+  font-weight: 700;
+  font-size: 26px;
+  margin-bottom: 18px;
+}
+
+.onsale {
+  display: block;
+  position: absolute;
+  top: 9px;
+  left: -10px;
+  padding: 2px 10px;
+  width: 70px;
+  background-color: #e21e22;
+  text-transform: uppercase;
+  color: #fff;
+  text-align: center;
+  transform: none;
+  font-weight: 700;
+  z-index: 90;
+  letter-spacing: 0;
+  font-size: 14px;
+}
+
+.onsale:before {
+  content: "";
+  display: block;
+  overflow: hidden;
+  border-right: solid 10px maroon;
+  border-top: solid 0 transparent;
+  border-bottom: solid 15px transparent;
+  position: absolute;
+  bottom: -15px;
+  left: 0;
+  opacity: 1;
+  background-color: transparent !important;
+  transform: none;
 }
 
 /* ------------------------------ */
